<resources>
    <string name="app_name">Workout Monitor</string>
    <string name="top_message">Are you ready? Bring it on!</string>
    <string name="title">train-A-wear</string>
    <string name="welcome">Welcome!</string>
    <string name="button_setup">SETUP</string>
    <string name="button_WORKOUT">WORKOUT</string>
    <string name="button_progress">PROGRESS</string>
    <string name="button_help">Help</string>
    <string name="edit_message">Enter your name</string>
    <string name="inputParameters">Please introduce the following:</string>
    <string name="textQuote">It does not matter how slowly you go as long as you do not stop - Confucius</string>
    <string name="textWeight">Weight</string>
    <string name="textHeight">Height</string>
    <string name="textAge">Age</string>
    <string name="enterWeight">(Kg)</string>
    <string name="enterHeight">(cm)</string>
    <string name="enterAge">y.o.</string>
    <string name="buttonOk">OK</string>
    <string name="ready">All set to go!</string>
    <string name="tools_ignore_contentdescription">tools:ignore=ContentDescription</string>
    <string name="workoutHeadline">Scroll to choose your workout</string>
    <string name="button_squat">Squat</string>
    <string name="button_plank">Plank</string>
    <string name="button_curls">Bicep curls</string>
    <string name="button_lunge">Lunges</string>
    <string name="workout_low_text">Remember to breathe in deeply and stay hydrated!</string>
    <string name="setup_hello">Hello</string>
    <string name="exercise_headline">Let\'s shape that body!</string>
    <string name="exercise_start">Start</string>
    <string name="exercise_type">Pick your squat type</string>
    <string name="button_exercise_start">Start</string>
    <string name="squat_classic">Classic</string>
    <string name="squat_plie">Plie</string>
    <string name="squat_weights">Weights</string>
    <string name="squat_stages">Squat stages</string>
    <string name="button_instructions">Wear it &amp; go</string>
    <string name="squatInstrHeadline">Instructions and Setup</string>
    <string name="calories_burned">Calories burned</string>
    <string name="calories_value">0 KCal</string>
    <string name="fire">fire</string>
    <string name="name">Name</string>
</resources>
