<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPeach"
    tools:context=".Workout">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textWorkoutHeader"
            android:fontFamily="serif-monospace"
            android:layout_marginTop="24dp"
            android:text="@string/workoutHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/buttonsquat"
            android:onClick="enterSquat"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/logosquat"
            android:text="@string/button_squat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWorkoutHeader" />

        <Button
            android:id="@+id/buttonCurls"
            android:onClick="enterBiceps"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:text="@string/button_curls"
            android:background="@drawable/logodumbbell"
            android:textAlignment="center"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonsquat" />

        <Button
            android:id="@+id/buttonLunges"
            android:onClick="enterLunge"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/logorun"
            android:text="@string/button_lunge"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCurls" />

        <Button
            android:id="@+id/buttonPlank"
            android:onClick="enterPlank"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/logorun"
            android:text="@string/button_plank"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCurls" />



        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/workout_low_text"
            android:textAlignment="center"
            android:textSize="22dp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>
</ScrollView>